<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/email"
    	android:title="@string/email"
        android:showAsAction="never" />
 	<item android:id="@+id/facebook"
        android:title="@string/facebook"
        android:showAsAction="never" />
	<item android:id="@+id/tweet"
        android:title="@string/tweet"
        android:showAsAction="never" />
	<item android:id="@+id/settings"
        android:title="@string/settings"
        android:showAsAction="never" />
	<item android:id="@+id/openxc"
        android:title="@string/openxc"
        android:showAsAction="ifRoom" />
	<item android:id="@+id/directionListMenu"
	    android:title="@string/directionsList" 
	    android:showAsAction="always"/>
	<item android:id="@+id/createRoute"
        android:title="@string/createRoute"
        android:showAsAction="always" />
	<item android:id="@+id/routeRoute"
		android:title="@string/mapTheRoute"
		android:showAsAction="always" />
	<item android:id="@+id/saveRouteMenu"
		android:title="@string/save"
		android:showAsAction="ifRoom" />
</menu>