<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/routeDetails"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/total_mileage"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/avg_mpg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/total_fuel_used"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrTotalMilesVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView3"
        android:paddingLeft="75dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrAvgMPGVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignRight="@+id/rrTotalMilesVal"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrFuelUsedVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/rrAvgMPGVal"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rrAvgMPGVal"
        android:layout_alignBottom="@+id/rrAvgMPGVal"
        android:layout_alignRight="@+id/textView8"
        android:text="@string/avg_mph"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrAvgMPHVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rrElapsedTimeVal"
        android:layout_below="@+id/rrElapsedTimeVal"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rrFuelUsedVal"
        android:layout_alignBottom="@+id/rrFuelUsedVal"
        android:layout_alignRight="@+id/textView9"
        android:text="@string/dateRecorded"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrDateRecordedVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignRight="@+id/rrAvgMPHVal"
        android:text="@string/zeroInt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/rrDateRecordedVal"
        android:text="@string/zeroInt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rrElapsedTimeVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignParentRight="true"
        android:paddingLeft="60dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_toLeftOf="@+id/rrElapsedTimeVal"
        android:paddingLeft="45dp"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>