<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fb_background">

	<EditText
	    android:id="@+id/fbPost"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:text="@string/fbPost"
	    android:textColor="#ffffff"
	    android:hint="@string/message"/>

	<Button
	    android:id="@+id/shareButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/authButton"
	    android:layout_alignRight="@+id/authButton"
	    android:layout_below="@+id/fbPost"
	    android:layout_marginTop="37dp"
	    android:gravity="center"
	    android:text="@string/share"
	    android:textStyle="bold"
	    android:visibility="invisible" />

	<com.facebook.widget.LoginButton
	    android:id="@+id/authButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/shareButton"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="16dp" />
	
</RelativeLayout>