<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" >

        <Button
            android:id="@+id/saveRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/endLoc"
            android:layout_below="@+id/endLoc"
            android:text="@string/saveRoute" />

        <Button
            android:id="@+id/routeRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endLoc"
            android:layout_toRightOf="@+id/saveRoute"
            android:layout_alignParentRight="true"
            android:text="@string/route" />

        <ImageButton
            android:id="@+id/swap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/saveRoute"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/swap"
            android:contentDescription="@string/route" />

        <AutoCompleteTextView
            android:id="@+id/endLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/startLoc"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/startLoc"
            android:ems="10"
            android:hint="@string/end"
            android:singleLine="true"
            android:inputType="textCapWords"/>

        <AutoCompleteTextView
            android:id="@+id/startLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/swap"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/start"
            android:singleLine="true"
            android:inputType="textCapWords" >
            <requestFocus />
        </AutoCompleteTextView>

        <CheckBox
            android:id="@+id/avoidHighways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/routeRoute"
            android:layout_below="@+id/routeRoute"
            android:text="@string/avoidHighways" />
    </RelativeLayout>

   	<fragment
   	    android:id="@+id/map2"
   	    android:name="com.google.android.gms.maps.MapFragment"
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dp"
   	    android:layout_weight="80"/>
  	
</LinearLayout>
