<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/route_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/route_mileage_val"
        android:text="@string/route_mileage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/route_mileage_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/route_mileage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_mileage_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/route_mileage"
        android:layout_below="@+id/route_mileage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/total_mileage_val"
        android:layout_below="@+id/total_mileage_val"
        android:text="@string/total_mileage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/total_fuel_used_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/total_mileage"
        android:layout_below="@+id/total_mileage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_fuel_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/total_fuel_used_val"
        android:layout_below="@+id/total_fuel_used_val"
        android:text="@string/total_fuel_used"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/avg_mpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/route_mileage_val"
        android:layout_alignBottom="@+id/route_mileage_val"
        android:layout_alignLeft="@+id/avg_mpg_val"
        android:text="@string/avg_mpg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/avg_mph_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total_fuel_used_val"
        android:layout_alignLeft="@+id/avg_mpg_val"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/mAVGMPH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/avg_mph_val"
        android:layout_below="@+id/avg_mph_val"
        android:text="@string/avg_mph"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/avg_mpg_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avg_mpg"
        android:textSize="32sp" />
 
</RelativeLayout>