<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >
	   	<TextView android:background="#222222"
		    android:id="@+id/routeInfo"
		    android:layout_height="0dip"
		    android:layout_width="fill_parent"
		    android:layout_weight="4"
		    android:gravity="center"
		    android:paddingLeft="5dp"
		    android:text="@string/routeInfo"
		    android:textColor="#fff"
	      	android:textStyle="bold" />

	   	<fragment
	   		android:id="@+id/map"
	 		android:layout_width="fill_parent"
	  		android:layout_height="0dip"
	  		android:layout_weight="96"
	   		android:name="com.google.android.gms.maps.MapFragment" />
	</LinearLayout>
	<SlidingDrawer
        android:id="@+id/slidingD"
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true">

	   	<LinearLayout
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:orientation="horizontal"
	   	    android:id="@+id/handle">

		<Button
            android:id="@+id/tfhandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/trafficIncidents" />

		<ImageView
		    android:id="@+id/drawer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/contentDescription"
		    android:src="@drawable/icon_drawer"
		    android:paddingTop="10dp"
		    android:paddingLeft="10dp"/>

		</LinearLayout>

	 	<LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF">

		<ListView android:id="@+id/incidents"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent" />

		</LinearLayout>
	</SlidingDrawer>
</RelativeLayout>